# CROSS-LIB

./: .gitignore  .missile.c.swp  A.T64  BUILD.txt  CREDITS.txt  HOW_TO_ADD_NEW_TARGET.txt  HOW_TO_LOAD_THE_GAME.txt  LICENCE.txt  Makefile  README.md  TARGETS.txt  THE_GAME.txt  TODO.txt  VGA_from_protected_mode.txt  a.cas  character.c  character.h  compile.bat  compileZ88DK.bat  compile_ATARI.bat  compile_C16.bat  compile_C64.bat  compile_CPC.bat  compile_SC3000.bat  compile_ZX.bat  compile_ZX_classic.bat  compile_apple.bat  compile_atmos.bat  compile_msx.bat  compile_telestrat.bat  compile_vg5k.bat  compile_vic20-16k.bat  compile_vic20-24k.bat  display.c  display.h  display_macros.c  display_macros.h  display_macros.s  enemy.c  enemy.h  (+28 more)
.devcontainer/: Dockerfile  container.env  devcontainer.env  devcontainer.json  post-start.sh
OLD/: character.c  character.h  compile.bat  compile_C16.bat  compile_C64.bat  compile_ZX.bat  compile_ZX_classic.bat  compile_atmos.bat  compile_msx.bat  display_macros.c  input_macros.c  input_macros.h  invincible_enemy.c  level.h  powerups.h  settings.h  sleep_macros.h  text.c
apple2/: apple2_input.h  apple2_sleep.h
atari/: atari_graphics.h  atari_input.h  atari_mode1_graphics.h  atari_sounds.c  atari_sounds.h
atmos/: atmos_input.c  atmos_input.h  atmos_redefined_characters.h  atmos_sounds.h
batches/: compile_merged_ace.bat  compile_merged_aquarius.bat  compile_merged_cbm.bat  compile_merged_cpc_monochrome.bat  compile_merged_enterprise.bat  compile_merged_lynx.bat  compile_merged_msx.bat  compile_merged_sord_m5.bat  compile_merged_supervision.bat  compile_merged_vg5k.bat  compile_merged_vic20.bat  compile_merged_vz200.bat  compile_merged_zx81.bat
c128/: c128_80col_graphics.h
c264/: c264_graphics.h  c264_sounds.h
c64/: c64_hardware_sprite.h  c64_redefined_characters.h  c64_sounds.h
cfg/: ___empty.cfg  atari_mode1_redefined_chars.cfg  atarixl_mode12.cfg  atmos_better_tap.cfg  c16-16k.cfg  c16-16k_extra.cfg  c16-16k_plus.cfg  c16_16k_less_stack.cfg  c16_GFX.cfg  c64_GFXat0xC000.cfg  creativision-16k.cfg  creativision-16k_2.cfg  creativision-32k.cfg  creativision-8k.cfg  default.cfg  pce_16k.cfg  pce_16k_less_stack.cfg  pce_extra.cfg  pce_reduced_stack.cfg  plus4_GFX.cfg  vic20-16k.cfg  vic20-16k_GFX.cfg  vic20-3k.cfg  vic20-3k_BK.cfg  vic20-3k_GFX.cfg  vic20-8k.cfg  vic20-8k_GFX.cfg  vic20-8k_tight.cfg  zpragma.inc  zpragma_clib.inc  zpragma_no_streams.inc
docs/: ALL_TARGETS.txt  ARCHITECTURES.md  Alice32k.txt  BUILD.md  BUILD.txt  BUILD_PROCESS.md  COMPILERS.md  COMPILERS.txt  COMPILER_NAMES.md  CREDITS.txt  CROSSLIB.md  CROSS_LIB_APIS.md  CROSS_LIB_APIS.txt  CX16.txt  Creativision_binary_structure.txt  Cross-Lib-HD.md  Cross-Lib-HD.txt  DISCLAIMER.md  EnglishArticle.md  FEATURE_STATUS.ods  GAMES.md  GAMES.txt  GAMES_ARTICLE.md  GIOCHI.md  HARDWARE_AGNOSTIC_CODE.md  HOW_TO_ADD_A_NEW_GAME.md  HOW_TO_INSTALL_COMPILERS.txt  HOW_TO_LOAD.md  HOW_TO_LOAD_THE_GAME.md  HOW_TO_LOAD_THE_GAME.txt  HOW_TO_LOAD_THE_GAME_ON_REAL_HARDWARE.md  INSTALL.md  LICENCE.txt  LINUX_SETUP.md  MSDOS_big_banging.txt  PREREQUISITES.md  SNAPSHOTS.md  STATUS.md  STATUS.txt  SUPPORT_FOR_NEW_TARGET.txt  (+26 more)
experiments/: .~lock.article.odt#  .~lock.cross_chase_ITA.odt#  4c.txt  CODE2.txt  Dragon.txt  LIGHT_versions.txt  ansitest.c  article.txt  atmos.cfg  attempt1.txt  boot_header.hex  c264_graphics.c  ceo.txt  coco_rand.c  compile_test.bat  compile_test_atari5200.bat  compile_test_gotoxy.bat  conio.c  coniotest.c  cpc_hello.c  cross_chase_ITA.odt  debug_cmoc.txt  display_macros.c  display_macros.h  end.hex  error.c  full_xchase.k7  gameOver.txt  hello.c  hello.nes  inkey.txt  joy-test.c  kc.txt  main_pointer_functions.c  memory_light.txt  mode1test.c  my_hello.c  ncurses.c  notes.txt  oric1.txt  (+19 more)
graphics/: CBM MOD.ctm  chars.s
light/: character.h  enemy.c  input.h  input_macros.h  invincible_enemy.h  powerups.c  settings.h  sound_macros.h  text.h
merged/: Makefile  character.c  character.h  compile_merged_ace.bat  compile_merged_apple.bat  compile_merged_aquarius.bat  compile_merged_atari.bat  compile_merged_atari5200.bat  compile_merged_atmos.bat  compile_merged_c128.bat  compile_merged_c264.bat  compile_merged_c64.bat  compile_merged_cbm.bat  compile_merged_cbm510.bat  compile_merged_cpc.bat  compile_merged_cpc_monochrome.bat  compile_merged_enterprice.bat  compile_merged_enterprise.bat  compile_merged_lynx.bat  compile_merged_msx.bat  compile_merged_mtx.bat  compile_merged_nes.bat  compile_merged_pce.bat  compile_merged_pet.bat  compile_merged_sc3000.bat  compile_merged_sord_m5.bat  compile_merged_supervision.bat  compile_merged_svi.bat  compile_merged_trs80.bat  compile_merged_vg5k.bat  compile_merged_vic20.bat  compile_merged_vz200.bat  compile_merged_zx.bat  (+32 more)
tools/cc65/osic1p/srecord-1.64/etc/: BUILDING.man  CHANGES.1.0.txt  CHANGES.1.1.txt  CHANGES.1.10.txt  CHANGES.1.2.txt  CHANGES.1.3.txt  CHANGES.1.4.txt  CHANGES.1.5.txt  CHANGES.1.6.txt  CHANGES.1.7.txt  CHANGES.1.8.txt  CHANGES.1.9.txt  CHANGES.sh  Howto.conf.in  README.man  apt-get-depends.cook  archive.cook  autoconf.cook  change_log.man  check-tarball.sh  configure.ac  crc16-ccitt.html  debian.png.uue  doc_cat.png.uue  doc_chip.png.uue  doc_gen.png.uue  doc_lens.png.uue  doc_lib.png.uue  documentation.cook  download.html  doxygen.cfg  doxygen.cook  groff.sh  howto.cook  howto_qemu_hardy64.txt  index.html  mailing-list.html  man-html-index.sh  metrics.cook  new.sh  (+15 more)
tools/cc65/osic1p/srecord-1.64/etc/template/: c  cc  etc-new-so  generic  h  lib_cc  lib_h  man  sh  test
tools/z88dk/abc80/abcdisk-2.7/: .gitignore  Makefile.in  abcfile.c  abcread.c  abctext.c  abcwrite.c  bac80.c  bac800.c  bin2abc.c  bin2abc.h  casencode.c  compiler.h  configure  configure.ac  deinter.c  formats.c  ihex.c  mkrel  patchlevel.h  relocs.c  unmangle.c  util.c
tools/z88dk/abc80/abcdisk-2.7/asmsrc/: bac80.asm  bac800a.asm  bac800d.asm  copy80.inc  end80.inc  mkcsrc.pl  setup80.inc  setup800.inc  start80.inc
tools/z88dk/abc80/abcdisk-2.7/clib/: dirent.c
tools/z88dk/abc80/abcdisk-2.7/config/: config.h  config.h.in
(+6080 files in other folders)
